# cloudigrade

./: .codecov.yml  .coveragerc  .env.example  .gitignore  .gitlab-ci.yml  .pylintrc  .pyup.yml  .s2iignore  .travis.yml  CONTRIBUTING.rst  Dockerfile  Makefile  Pipfile  README-dev.md  README.md  README.rst  docker-compose.yml  openapi-internal.json  openapi.json  pyproject.toml  renovate.json  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  User_story.md  bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: cicd.yml  codeql-analysis.yml  pr.yml  push.yml  tag.yml  tests.yml
.gitlab/issue_templates/: Bug.md  User Story.md
.gitlab/merge_request_templates/: Integration Testing.md
.tekton/: cloudigrade-pull-request.yaml  cloudigrade-push.yaml
cloudigrade/: manage.py  sources_listener.py
cloudigrade/account/: __init__.py  admin.py  exceptions.py  models.py  reports.py  serializers.py  tasks.py  tests.py  util.py  validators.py  views.py
cloudigrade/account/migrations/: 0001_initial.py  0002_auto_20180319_2023.py  0002_instance_instanceevent.py  0003_auto_20180322_1356.py  0003_auto_20180326_1409.py  0003_instanceevent_instance_type.py  0004_auto_20180328_1633.py  0004_instanceevent_subnet.py  0005_machineimage_is_encrypted.py  0006_account_user.py  0007_add_image_properties.py  0008_machineimage_status.py  0009_awsmachineimagecopy.py  0010_openshift_tag.py  0011_account_name.py  0012_instanceevent_machineimage_fkey.py  0013_update_machineimage_properties.py  0014_make_awsinstanceevent_subnet_optional.py  0015_machineimage_name.py  0016_unique_clount_name_per_user.py  0017_awsmachineimage_owner_aws_account_id.py  0018_remove_machineimage_rhel_detected.py  0019_add_error_status.py  0020_make_is_encrypted_default_to_false.py  0021_instanceevent_nullable_fields.py  0022_awsec2instancedefinitions.py  (+20 more)
cloudigrade/analyzer/: admin.py  cloudtrail.py  models.py  tasks.py
cloudigrade/api/: __init__.py  admin.py  apps.py  authentication.py  cloudtrail.py  error_codes.py  filters.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  util.py  views.py  viewsets.py
cloudigrade/config/: celery.py  flowerconfig.py  gunicorn.py  urls.py  wsgi.py
cloudigrade/dj_auth/: apps.py  permissions.py  views.py
cloudigrade/internal/: apps.py  authentication.py  encoders.py  filters.py  metrics.py  prometheus.py  redis.py  renderers.py  serializers.py  urls.py  util.py  views.py  viewsets.py
cloudigrade/util/: __init__.py  apps.py  aws.py  cache.py  celery.py  exceptions.py  filters.py  health.py  insights.py  leaderrun.py  logfilter.py  middleware.py  misc.py  models.py  permissions.py
dashboards/: grafana-dashboard-clouddot-insights-cloudigrade.configmap.yaml
deploy/: clowdapp.yaml
deployment/: RHIT-CA-2022.crt  clowdapp.yaml  stage-smoke.yaml  t
deployment/dev/: nginx.conf
deployment/nginx/: nginx.conf
deployment/ocp/: cloudigrade.yml  rabbitmq.yml
deployment/playbooks/: ansible.cfg  manage-aws.yml  manage-cloudigrade.yml  manage-clowder.yml  pyproject.toml
deployment/playbooks/roles/aws/defaults/: main.yml
deployment/playbooks/roles/aws/files/: cloudwatch-policy.json  create-notification.py  ec2_assume_role_policy.json
deployment/playbooks/roles/aws/tasks/: ec2.yml  ecs.yml  iam.yml  main.yml  s3.yml
deployment/playbooks/roles/aws/templates/: cloudigrade-deployment-policy.json.j2  ec2_houndigrade_put_policy.json.j2  env.j2  s3_bucket_policy.json.j2  s3_trail_bucket_policy.json.j2  sqs_inspection_policy.json.j2  sqs_policy.json.j2  sqs_trail_policy.json.j2
deployment/playbooks/roles/clowder/defaults/: main.yml
deployment/playbooks/roles/clowder/tasks/: clowder.yml  main.yml  push_local.yml
deployment/playbooks/roles/clowder/templates/: cloudigrade_app_secret.json.j2  cloudigrade_azure.json.j2  cloudwatch.json.j2  config.yaml.j2  pull_secret_patch.yaml.j2.yaml
deployment/prod/: nginx.conf
deployment/scripts/: build_deploy.sh  cloudigrade_init.sh  mid_hook.sh  pr_check.sh  sonarqube.sh  sonarqube_exec.sh  wait_for_migrations.sh
docker/: entrypoint.sh  nginx.conf
docs/: account-register.diag  architecture-overview.xml  architecture.md  architecture.rst  aws-create-policy-and-role-for-arn.rst  dev-automated-aws-setup.md  dev-cloudtrail-initial-setup.rst  dev-houndigrade-cluster-setup.md  dev-sysop-aws-rds-setup.rst  development-environment.rst  inspection-aws-01-copy-snapshot.diag  inspection-aws-04-scale-cluster.diag  inspection-aws-08-cleanup-cluster.diag  managing-deployments.rst  periodic-log-scrape.diag  register-accounts.md  rest-api-examples.md  rest-api-examples.py  rest-api-examples.rst  rest-api-examples.rst.jinja  updating-illustrations.md
docs/illustrations/: account-register.diag  inspection-aws-02-create-volume.diag  inspection-aws-03-enqueue-volume.diag  inspection-aws-05-configure-cluster.diag  inspection-aws-06-inspection.diag  inspection-aws-07-process-results.diag
docs/images/: cloudigrade-arch.drawio
requirements/: base.txt  docs.txt  lint.txt  local.txt  test.txt
tests/: test_cloudigrade.py
(+436 files in other folders)
