[tool.poetry]
name = "cloudigrade"
version = "1.0.0"
description = "Cloudigrade is an open-source suite of tools for tracking Linux distribution use in public cloud platforms."
authors = ["Cloudigrade Dev Team <doppler-dev@redhat.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
boto = "~=2.49.0"
django-environ = "~=0.10.0"
boto3 = "~=1.26.5"
celery = "~=5.2.6"
psycopg2 = "~=2.9.3"
python-dateutil = "~=2.8.2"
djangorestframework = "~=3.14.0"
drf-insights-pagination = "~=1.0.1"
gunicorn = "~=20.1.0"
django-health-check = "~=3.17.0"
sentry-sdk = "~=1.14.0"
Django = "~=4.1.7"
django_celery_beat = "~=2.4.0"
Faker = "~=16.8.1"
requests = "~=2.28.0"
uritemplate = "~=4.1.1"
rest-framework-generic-relations = "~=2.1.0"
watchtower = "~=3.0.0"
confluent-kafka = "~=2.0.2"
django-filter = "~=22.1"
django-cache-memoize = "~=0.1.10"
app-common-python = "^0.2.3"
azure-cli-core = "^2.39.0"
azure-identity = "^1.10.0"
azure-mgmt-managedservices = "^6.0.0"
azure-mgmt-resource = "^22.0.0"
django-prometheus = "~=2.2.0"
redis = "^4.2.2"
django-redis = "^5.2.0"
setuptools = "^67.0.0"


[tool.poetry.dev-dependencies]
jinja2 = "~3.1.2"
flake8 = "~6.0.0"
flake8-docstrings = "~1.7.0"
flake8-import-order = "~0.18.2"
isort = "~5.12.0"
coverage = "~7.2.0"
pydocstyle = "~6.3.0"
flake8-black = "~0.3.6"
black = "^22.12.0"
openapi-spec-validator = "^0.5.0"
crc-bonfire = "^4.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
