[tool.poetry]
name = "cloudigrade"
version = "1.0.0"
description = "Cloudigrade is an open-source suite of tools for tracking Linux distribution use in public cloud platforms."
authors = ["Cloudigrade Dev Team <doppler-dev@redhat.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
boto = "~=2.49.0"
django-environ = "~=0.11.2"
boto3 = "~=1.33.6"
celery = "~=5.3.1"
psycopg2 = "~=2.9.3"
python-dateutil = "~=2.8.2"
djangorestframework = "~=3.14.0"
drf-insights-pagination = "~=1.0.1"
gunicorn = "^22.0.0"
django-health-check = "~=3.17.0"
sentry-sdk = "~=1.38.0"
Django = "~=4.2.7"
django_celery_beat = "~=2.5.0"
Faker = "~=16.9.0"
requests = "~=2.31.0"
uritemplate = "~=4.1.1"
rest-framework-generic-relations = "~=2.1.0"
watchtower = "~=3.0.0"
confluent-kafka = "~=2.3.0"
django-filter = "~=22.1"
django-cache-memoize = "~=0.2.0"
app-common-python = "^0.2.3"
azure-cli-core = "^2.39.0"
azure-identity = "^1.10.0"
azure-mgmt-managedservices = "^6.0.0"
azure-mgmt-resource = "^22.0.0"
django-prometheus = "~=2.3.1"
redis = "^4.5.4"
django-redis = "^5.2.0"
setuptools = "^67.0.0"
sqlparse = "0.5.0"
idna = "3.7"
pyopenssl = "24.1.0"
black = "^24.4.2"
typing-extensions = "^4.11.0"
crc-bonfire = "^5.7.2"


[tool.poetry.dev-dependencies]
jinja2 = "~3.1.3"
flake8 = "~6.1.0"
flake8-docstrings = "~1.7.0"
flake8-import-order = "~0.18.2"
isort = "~5.12.0"
coverage = "~7.3.0"
pydocstyle = "~6.3.0"
flake8-black = "~0.3.6"
openapi-spec-validator = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
